# localcolabfold

./: .drone.yml  .gitignore  1BJP_1.fasta  Dockerfile  LICENSE  README.md  README_ja.md  beta_install_colabbatch_linux.sh  beta_update_linux.sh  install_colabbatch_M1mac.sh  install_colabbatch_intelmac.sh  install_colabbatch_linux.sh  install_colabfold_M1mac.sh  install_colabfold_intelmac.sh  install_colabfold_linux.sh  install_colabfold_macOS.sh  pyproject.toml  residue_constants.patch  run_colabfoldbatch_sample.sh  runner.py  runner_af2advanced.py  runner_af2advanced_old.py  update_M1mac.sh  update_intelmac.sh  update_linux.sh
.github/ISSUE_TEMPLATE/: bug-report.md  question.md
v1.0.0/: README.md  README_ja.md  colabfold_alphafold.patch  gpurelaxation.patch  install_colabfold_M1mac.sh
v1.5.5/: install_colabbatch_M1mac.sh  install_colabbatch_linux.sh  update_intelmac.sh
v1.5.5_old_installers/: README.md  README_ja.md  update_linux.sh
