[project]
name = "localcolabfold"
version = "1.5.5"
description = "ColabFold on your local PC"
readme = "README.md"
requires-python = "==3.12.12"

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "osx-arm64"]
authors = [
    "Yoshitaka Moriwaki <moriwaki.yoshitaka@tmd.ac.jp, moriwaki@bi.a.u-tokyo.ac.jp>"
]

[tool.pixi.target.linux-64.dependencies]
git = "*"
openmm = "==8.2.0"
pdbfixer = "==1.10"
kalign2 = "==2.04"
hhsuite = "==3.3.0"
mmseqs2 = "*"
numpy = "<=2.1.3"

[tool.pixi.target.linux-64.pypi-dependencies]
colabfold = { git = "git+https://github.com/sokrypton/ColabFold", extras = ["alphafold-minus-jax"] }
# colabfold = "==1.5.5"
jax = { version = "==0.5.3", extras = ["cuda12"] }
tensorflow = "==2.19.1"
tqdm = "==4.66.1"
silence_tensorflow = "==1.2.3"

[tool.pixi.target.osx-arm64.dependencies]
git = "*"
openmm = "==8.2.0"
pdbfixer = "==1.10"
kalign2 = "==2.04"
hhsuite = "==3.3.0"
mmseqs2 = "*"
numpy = "<=2.1.3"

[tool.pixi.target.osx-arm64.pypi-dependencies]
colabfold = { git = "git+https://github.com/sokrypton/ColabFold", extras = ["alphafold-minus-jax"] }
# colabfold = { version = "==1.5.5", extras = ["alphafold"] }
# No GPU support. jax-metal 0.1.1 doesn't work well with ColabFold because of multiprocessing.resource_tracker issue.
jax = "==0.5.0"
jaxlib = "==0.5.0"
tensorflow = "==2.20.0"
silence_tensorflow = "==1.2.3"

[tool.pixi.tasks]
setup = { depends-on = ["fix-matplotlib-backend", "fix-tensorflow-warnings", "remove-pixi-cache"] }

fix-matplotlib-backend = """
sed -i -e "s#from matplotlib import pyplot as plt#import matplotlib\\nmatplotlib.use('Agg')\\nimport matplotlib.pyplot as plt#g" .pixi/envs/default/lib/python3.12/site-packages/colabfold/plot.py
"""
fix-tensorflow-warnings = """
sed -i -e "s#from io import StringIO#from io import StringIO\\nfrom silence_tensorflow import silence_tensorflow\\nsilence_tensorflow()#g" .pixi/envs/default/lib/python3.12/site-packages/colabfold/batch.py
"""
remove-pixi-cache = """
rm -rf __pycache__
"""
